--- a/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/M5StrummingGuitars.html
+++ b/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/M5StrummingGuitars.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feel the Chords Module 1</title>
-    <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/M1.css">
+    <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/M10.css">
 
 
 </head>
 <body>
     <header>
-        <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/index.html">
+        <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/M5Index.html">
 
-            <h1>Feel the Chords</h1>
+            <h1>Module 5</h1>
         </a>
         <nav>
             <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
