--- a/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/M5CountryWaltz.html
+++ b/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/M5CountryWaltz.html
@@ -27,54 +27,53 @@
         <section id="steezy">
             <h2>Chords 1 and 4 or chords 1 and 5</h2>
         </section>
-
         <div class="lesson-block">
             <p>key of A</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Country Waltz/Chords 1 and 5 - Country Waltz (key of A).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Country Waltz/Chords 1 and 5 - Country Waltz (key of A).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Ab</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Country Waltz/Chords 1 and 5 - Country Waltz (key of Ab).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Country Waltz/Chords 1 and 5 - Country Waltz (key of Ab).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of B</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Country Waltz/Chords 1 and 5 - Country Waltz (key of B).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Country Waltz/Chords 1 and 5 - Country Waltz (key of B).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Bb</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Country Waltz/Chords 1 and 5 - Country Waltz (key of Bb).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Country Waltz/Chords 1 and 5 - Country Waltz (key of Bb).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of C</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Country Waltz/Chords 1 and 5 - Country Waltz (key of C).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Country Waltz/Chords 1 and 5 - Country Waltz (key of C).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of D</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Country Waltz/Chords 1 and 5 - Country Waltz (key of D).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Country Waltz/Chords 1 and 5 - Country Waltz (key of D).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Db</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Country Waltz/Chords 1 and 5 - Country Waltz (key of Db).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Country Waltz/Chords 1 and 5 - Country Waltz (key of Db).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of E</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Country Waltz/Chords 1 and 5 - Country Waltz (key of E).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Country Waltz/Chords 1 and 5 - Country Waltz (key of E).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Eb</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Country Waltz/Chords 1 and 5 - Country Waltz (key of Eb).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Country Waltz/Chords 1 and 5 - Country Waltz (key of Eb).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of F</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Country Waltz/Chords 1 and 5 - Country Waltz (key of F).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Country Waltz/Chords 1 and 5 - Country Waltz (key of F).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of G</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Country Waltz/Chords 1 and 5 - Country Waltz (key of G).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Country Waltz/Chords 1 and 5 - Country Waltz (key of G).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Gb</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Country Waltz/Chords 1 and 5 - Country Waltz (key of Gb).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Country Waltz/Chords 1 and 5 - Country Waltz (key of Gb).mp3"></audio>
         </div>
  
   
