--- a/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/M5Dreamy.html
+++ b/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/M5Dreamy.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feel the Chords Module 3</title>
-    <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/M3.css">
+    <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/M6.css">
 
 
 </head>
 <body>
     <header>
-        <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/index.html">
+        <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/M5Index.html">
 
-            <h1>Feel the Chords</h1>
+            <h1>Module 5</h1>
         </a>
         <nav>
             <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
@@ -27,54 +27,55 @@
         <section id="steezy">
             <h2>Chords 1 and 4 or chords 1 and 5</h2>
         </section>
-
+        
+        /Users/thomastooten/Documents/GitHub/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Dreamy/Chords 1 and 5 - Dreamy (key of A).mp3
         <div class="lesson-block">
             <p>key of A</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Dreamy/Chords 1 and 5 - Dreamy (key of A).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Dreamy/Chords 1 and 5 - Dreamy (key of A).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Ab</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Dreamy/Chords 1 and 5 - Dreamy (key of Ab).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Dreamy/Chords 1 and 5 - Dreamy (key of Ab).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of B</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Dreamy/Chords 1 and 5 - Dreamy (key of B).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Dreamy/Chords 1 and 5 - Dreamy (key of B).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Bb</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Dreamy/Chords 1 and 5 - Dreamy (key of Bb).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Dreamy/Chords 1 and 5 - Dreamy (key of Bb).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of C</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Dreamy/Chords 1 and 5 - Dreamy (key of C).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Dreamy/Chords 1 and 5 - Dreamy (key of C).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of D</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Dreamy/Chords 1 and 5 - Dreamy (key of D).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Dreamy/Chords 1 and 5 - Dreamy (key of D).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Db</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Dreamy/Chords 1 and 5 - Dreamy (key of Db).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Dreamy/Chords 1 and 5 - Dreamy (key of Db).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of E</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Dreamy/Chords 1 and 5 - Dreamy (key of E).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Dreamy/Chords 1 and 5 - Dreamy (key of E).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Eb</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Dreamy/Chords 1 and 5 - Dreamy (key of Eb).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Dreamy/Chords 1 and 5 - Dreamy (key of Eb).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of F</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Dreamy/Chords 1 and 5 - Dreamy (key of F).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Dreamy/Chords 1 and 5 - Dreamy (key of F).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of G</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Dreamy/Chords 1 and 5 - Dreamy (key of G).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Dreamy/Chords 1 and 5 - Dreamy (key of G).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Gb</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Dreamy/Chords 1 and 5 - Dreamy (key of Gb).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Dreamy/Chords 1 and 5 - Dreamy (key of Gb).mp3"></audio>
         </div>
  
  
